修复代码风格问题，优化代码性能。